--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 
 <body>
 
-<h1> Médico do Exército: saiba como seguir essa carreira </h1>
-A carreira de um médico pode seguir pelos mais variados caminhos e especializações. Uma das menos lembradas é a carreira
+ <h1> Médico do Exército: saiba como seguir essa carreira </h1>
+
+<p> A carreira de um médico pode seguir pelos mais variados caminhos e especializações. Uma das menos lembradas é a carreira
 militar. Comumente associada apenas aos homens jovens, devido ao alistamento obrigatório, pode ser uma excelente opção
-para esses profissionais. Nesse artigo, vamos falar mais especificamente sobre o médico do Exército.
+para esses profissionais. Nesse artigo, vamos falar mais especificamente sobre o médico do Exército.</p>
+
 <h2> O que significa ser um médico do exército? </h2>
 O médico das Forças Armadas faz parte do corpo de Saúde de cada poder militar. Esse corpo é formado por um conjunto de
 profissionais, entre eles enfermeiros, fisioterapeutas, odontologistas, farmacêuticos, psicólogos e até veterinários.
 Esses médicos são profissionais à serviço do Estado, atendendo os membros das forças armadas ou a população em missões
 especiais. Atuam em hospitais, ambulatórios e clínicas que atendem exclusivamente à oficiais e seus familiares ou dentro
 dos próprios batalhões.
+
+<img class="imagem" src="imagem.jpg">
 
 <p>Principais atividades</p>
 O médico do Exército possui um cargo de grande responsabilidade e pode ser requisitado para atuar em situação muito
@@ -40,6 +44,8 @@ complexas. Abaixo, temos alguns exemplos:</p4>
 
     – tarefas administrativas e de gestão da área de Saúde.<br>
 
+    <img class="ferido" src="ferido.jpg">
+
 <h2>Como se tornar um Médico do Exército.</h2>
 
 <p>Primeiro passo: a faculdade de Medicina</p>
@@ -53,6 +59,8 @@ Forças Armadas. Um formulário é disponibilizado nessas ocasiões e deve ser p
 opcionalmente pelas mulheres. Depois, caso haja necessidade, após a sua formação, esses profissionais podem ser
 convocados para serviço. Não é comum que pessoas não interessadas sejam convocadas – o número de voluntários geralmente
 é suficiente.</p>
+
+<img class="alistamento" src="alistamentoo.jpeg">
 
 <p>Segundo caminho: oficiais temporários</p>
 Periodicamente, as Forças Armadas lançam editais para oficiais temporários. O prazo de serviço é de 1 a 8 anos e o
